// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name matches the snapshot: example-provider-functions 1`] = `
"// generated from provider function schema

import * as cdktn from 'cdktn';

/**
* Provider-defined functions of the example provider.
*/
export class ExampleProviderFunctions {
  private readonly providerLocalName: string;

  /**
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  constructor(providerLocalName: string) {
    this.providerLocalName = providerLocalName;
  }

  /**
  * Returns an object describing the build that produced the given seed.
  * @param {string} seed
  * @returns {object}
  */
  public buildInfo(seed: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "build_info", [seed]);
  }

  /**
  * Returns true_value if condition is true, otherwise returns false_value. The dynamic return type allows either branch to be a value of any type.
  * @param {boolean | IResolvable} condition
  * @param {any} trueValue
  * @param {any} falseValue
  * @returns {any}
  */
  public conditionIf(condition: boolean | cdktn.IResolvable, trueValue: any, falseValue: any): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "condition_if", [condition, trueValue, falseValue]);
  }

  /**
  * Renders the given map of config objects as a single string.
  * @param {any} configs
  * @returns {string}
  */
  public configMap(configs: any): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "config_map", [configs]));
  }

  /**
  * Returns a map of config objects keyed by tag for the given prefix.
  * @param {string} prefix
  * @returns {{ [key: string]: any }}
  */
  public configsByTag(prefix: string): { [key: string]: any } {
    return cdktn.Token.asAnyMap(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "configs_by_tag", [prefix]));
  }

  /**
  * Returns a map of counts keyed by tag for the given prefix.
  * @param {string} prefix
  * @returns {{ [key: string]: number }}
  */
  public countByTag(prefix: string): { [key: string]: number } {
    return cdktn.Token.asNumberMap(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "count_by_tag", [prefix]));
  }

  /**
  * Returns a default map of string tags derived from the given prefix - used to prove a map(string) RETURN can be fed directly into another function's map(string) PARAMETER (see tag_map above).
  * @param {string} prefix
  * @returns {{ [key: string]: string }}
  */
  public defaultTags(prefix: string): { [key: string]: string } {
    return cdktn.Token.asStringMap(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "default_tags", [prefix]));
  }

  /**
  * Renders the given list of config objects as a single string.
  * @param {[list] Array<object>} configs
  * @returns {string}
  */
  public describeConfigs(configs: any[] | cdktn.IResolvable): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "describe_configs", [configs]));
  }

  /**
  * Returns true if any flag in the given set of flags is true.
  * @param {[set] Array<boolean | IResolvable>} flags
  * @returns {boolean | IResolvable}
  */
  public flagSet(flags: Array<boolean | cdktn.IResolvable> | cdktn.IResolvable): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "flag_set", [flags]);
  }

  /**
  * Returns a map of flags keyed by tag for the given prefix.
  * @param {string} prefix
  * @returns {{ [key: string]: boolean }}
  */
  public flagsByTag(prefix: string): { [key: string]: boolean } {
    return cdktn.Token.asBooleanMap(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "flags_by_tag", [prefix]));
  }

  /**
  * Returns a set of flags derived from the given seed - used to prove a set(bool) RETURN can be fed directly into another function's set(bool) PARAMETER (see flag_set above).
  * @param {string} seed
  * @returns {[set] Array<boolean | IResolvable>}
  */
  public flagsForSeed(seed: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "flags_for_seed", [seed]);
  }

  /**
  * Returns true if any flag in the given ordered list of flags is true.
  * @param {[list] Array<boolean | IResolvable>} flags
  * @returns {boolean | IResolvable}
  */
  public flagsOrdered(flags: Array<boolean | cdktn.IResolvable> | cdktn.IResolvable): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "flags_ordered", [flags]);
  }

  /**
  * Joins the given strings together using the provided separator.
  * @param {string} separator
  * @param {Array<string>} values
  * @returns {string}
  */
  public joinStrings(separator: string, values: Array<string>): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "join_strings", [separator, ...values]));
  }

  /**
  * A deprecated helper kept around for backwards compatibility.
  * @deprecated Use new_helper instead.
  * @param {string} input
  * @returns {string}
  */
  public legacyHelper(input: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "legacy_helper", [input]));
  }

  /**
  * Returns a list of numbers counting up from 1 to the given count.
  * @param {number} count
  * @returns {[list] Array<number>}
  */
  public listNumbers(count: number): number[] {
    return cdktn.Token.asNumberList(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "list_numbers", [count]));
  }

  /**
  * Returns a list of names prefixed with the given prefix.
  * @param {string} prefix
  * @returns {[list] Array<string>}
  */
  public listPrefixedNames(prefix: string): string[] {
    return cdktn.Token.asList(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "list_prefixed_names", [prefix]));
  }

  /**
  * Joins a possibly-null prefix with a required suffix.
  * @param {string | IResolvable - pass cdktn.Token.nullValue() for an explicit null} prefix
  * @param {string} suffix
  * @returns {string}
  */
  public midNullable(prefix: string | cdktn.IResolvable, suffix: string): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "mid_nullable", [prefix, suffix]));
  }

  /**
  * Flattens a matrix (a list of lists of strings) into a single string.
  * @param {[list] Array<[list] Array<string>>} matrix
  * @returns {string}
  */
  public nestedList(matrix: string[][] | cdktn.IResolvable): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "nested_list", [matrix]));
  }

  /**
  * Adds up a default starting value and any number of addends.
  * @param {number} defaultValue
  * @param {Array<number>} addends
  * @returns {number}
  */
  public sum(defaultValue: number, addends: Array<number>): number {
    return cdktn.Token.asNumber(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "sum", [defaultValue, ...addends]));
  }

  /**
  * Renders the given map of string tags as a single string.
  * @param {{ [key: string]: string }} tags
  * @returns {string}
  */
  public tagMap(tags: { [key: string]: string }): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "tag_map", [tags]));
  }

  /**
  * Greets the given name, optionally with a custom greeting.
  * @param {string} name
  * @param {string | IResolvable - omit or pass cdktn.Token.nullValue() to render the Terraform null keyword} greeting
  * @returns {string}
  */
  public trailingNullable(name: string, greeting?: string | cdktn.IResolvable): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "trailing_nullable", [name, greeting]));
  }

  /**
  * Joins a label with any number of possibly-null items.
  * @param {string} label
  * @param {Array<string | IResolvable> - pass cdktn.Token.nullValue() for an explicit null} items
  * @returns {string}
  */
  public variadicNullable(label: string, items: Array<string | cdktn.IResolvable>): string {
    return cdktn.Token.asString(cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "variadic_nullable", [label, ...items]));
  }
}
"
`;

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name matches the snapshot: provider-index 1`] = `
"// generated by cdktn get
export * as providerFunctions from './provider-functions/index';

"
`;

exports[`generate provider functions covering variadic parameters, primitive/list returns, and a 'default' parameter name matches the snapshot: provider-lazy-index 1`] = `
"// generated by cdktn get
Object.defineProperty(exports, 'providerFunctions', { get: function () { return require('./provider-functions'); } });

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): provider-index 1`] = `
"// generated by cdktn get
export * as staticResource from './static-resource/index';
export * as provider from './provider/index';
export * as providerFunctions from './provider-functions/index';

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): provider-lazy-index 1`] = `
"// generated by cdktn get
Object.defineProperty(exports, 'staticResource', { get: function () { return require('./static-resource'); } });
Object.defineProperty(exports, 'provider', { get: function () { return require('./provider'); } });
Object.defineProperty(exports, 'providerFunctions', { get: function () { return require('./provider-functions'); } });

"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): time-provider 1`] = `
"// https://registry.terraform.io/providers/hashicorp/time/latest/docs
// generated from terraform resource schema

import { Construct } from 'constructs';
import * as cdktn from 'cdktn';

// Configuration

export interface TimeProviderConfig {
  /**
  * Alias name
  *
  * Docs at Terraform Registry: {@link https://registry.terraform.io/providers/hashicorp/time/latest/docs#alias TimeProvider#alias}
  */
  readonly alias?: string;
}

import { TimeProviderFunctions } from '../provider-functions/index';
/**
* Represents a {@link https://registry.terraform.io/providers/hashicorp/time/latest/docs time}
*/
export class TimeProvider extends cdktn.TerraformProvider {

  // =================
  // STATIC PROPERTIES
  // =================
  public static readonly tfResourceType = "time";

  // ==============
  // STATIC Methods
  // ==============
  /**
  * Generates CDKTN code for importing a TimeProvider resource upon running "cdktn plan <stack-name>"
  * @param scope The scope in which to define this construct
  * @param importToId The construct id used in the generated config for the TimeProvider to import
  * @param importFromId The id of the existing TimeProvider that should be imported. Refer to the {@link https://registry.terraform.io/providers/hashicorp/time/latest/docs#import import section} in the documentation of this resource for the id to use
  * @param provider? Optional instance of the provider where the TimeProvider to import is found
  */
  public static generateConfigForImport(scope: Construct, importToId: string, importFromId: string, provider?: cdktn.TerraformProvider) {
        return new cdktn.ImportableResource(scope, importToId, { terraformResourceType: "time", importId: importFromId, provider });
      }

  // ===========
  // INITIALIZER
  // ===========

  /**
  * Create a new {@link https://registry.terraform.io/providers/hashicorp/time/latest/docs time} Resource
  *
  * @param scope The scope in which to define this construct
  * @param id The scoped construct ID. Must be unique amongst siblings in the same scope
  * @param options TimeProviderConfig = {}
  */
  public constructor(scope: Construct, id: string, config: TimeProviderConfig = {}) {
    super(scope, id, {
      terraformResourceType: 'time',
      terraformGeneratorMetadata: {
        providerName: 'time'
      },
      terraformProviderSource: 'registry.terraform.io/hashicorp/time'
    });
    this._alias = config.alias;
  }

  // ==========
  // ATTRIBUTES
  // ==========

  // alias - computed: false, optional: true, required: false
  private _alias?: string; 
  public get alias() {
    return this._alias;
  }
  public set alias(value: string | undefined) {
    this._alias = value;
  }
  public resetAlias() {
    this._alias = undefined;
  }
  // Temporarily expose input value. Use with caution.
  public get aliasInput() {
    return this._alias;
  }

  // ==========================
  // PROVIDER-DEFINED FUNCTIONS
  // ==========================
  private _functions?: TimeProviderFunctions;

  /**
  * Provider-defined functions of the time provider.
  */
  public get functions(): TimeProviderFunctions {
    if (!this._functions) {
      this._functions = new TimeProviderFunctions(this.terraformResourceType);
    }
    return this._functions;
  }

  // =========
  // SYNTHESIS
  // =========

  protected synthesizeAttributes(): { [name: string]: any } {
    return {
      alias: cdktn.stringToTerraform(this._alias),
    };
  }

  protected synthesizeHclAttributes(): { [name: string]: any } {
    const attrs = {
      alias: {
        value: cdktn.stringToHclTerraform(this._alias),
        isBlock: false,
        type: "simple",
        storageClassType: "string",
      },
    };

    // remove undefined attributes
    return Object.fromEntries(Object.entries(attrs).filter(([_, value]) => value !== undefined && value.value !== undefined ))
  }
}
"
`;

exports[`generate provider functions for the time provider (real terraform 1.15.6 schema fragment): time-provider-functions 1`] = `
"// generated from provider function schema

import * as cdktn from 'cdktn';

/**
* Provider-defined functions of the time provider.
*/
export class TimeProviderFunctions {
  private readonly providerLocalName: string;

  /**
  * @param providerLocalName The local name of the provider in required_providers; defaults to the registry short name. Override when the provider is declared under a different local name — aliases do not change the namespace, local names do.
  */
  constructor(providerLocalName: string) {
    this.providerLocalName = providerLocalName;
  }

  /**
  * Given a [Go duration string](https://pkg.go.dev/time#ParseDuration), will parse and return an object representation of that duration.
  * @param {string} duration Go time package duration string to parse
  * @returns {object}
  */
  public durationParse(duration: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "duration_parse", [duration]);
  }

  /**
  * Given an RFC3339 timestamp string, will parse and return an object representation of that date and time.
  * @param {string} timestamp RFC3339 timestamp string to parse
  * @returns {object}
  */
  public rfc3339Parse(timestamp: string): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "rfc3339_parse", [timestamp]);
  }

  /**
  * Given a unix timestamp integer, will parse and return an object representation of that date and time. A unix timestamp is the number of seconds elapsed since January 1, 1970 UTC.
  * @param {number} unixTimestamp Unix Timestamp integer to parse
  * @returns {object}
  */
  public unixTimestampParse(unixTimestamp: number): cdktn.IResolvable {
    return cdktn.TerraformProviderFunction.invoke(this.providerLocalName, "unix_timestamp_parse", [unixTimestamp]);
  }
}
"
`;
